# PhoLogToLabStreamingLayer

./: .gitignore  EVENTBOARD_README.md  LogToLabStreamingLayerIcon.icns  PhoLSLLoggingApps.code-workspace  PhoLogToLabStreamingLayer.code-workspace  README.md  eventboard_config.json  install_and_run.bat  logger_app.py  logger_app.spec  main.py  pyproject.toml  run_logger.bat  test_eventboard.py  test_popover.py
.cursor/plans/: console_output_integration_be202290.plan.md  file-based_pid_locking_for_singletoninstancemixin_a7820748.plan.md  fix_console_hide_hang_7550704c.plan.md  fix_torch_macos_x86_64_compatibility_42e4f5c3.plan.md  move_log_history_to_top-level_2e24fd93.plan.md  optional_opencv_dependency_7a1d274f.plan.md  stream_discovery_and_shutdown_reliability_fixes_e989c921.plan.md
.github/workflows/: python-package.yml
.kiro/specs/lab-recorder-integration/: design.md  requirements.md  tasks.md
.kiro/specs/stream-viewer-integration/: design.md  requirements.md  tasks.md
flutter_version/: README.md
flutter_version/logger_app/: .metadata  pubspec.yaml
flutter_version/logger_app/android/app/: build.gradle.kts
flutter_version/logger_app/android/app/src/main/: AndroidManifest.xml
flutter_version/logger_app/android/app/src/main/kotlin/com/example/logger_app/: MainActivity.kt
flutter_version/logger_app/ios/Runner/: Info.plist
flutter_version/logger_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_version/logger_app/lib/: main.dart
flutter_version/logger_app/lib/dev/: lsl_check_app.dart
flutter_version/logger_app/lib/models/: eventboard_config.dart  log_entry.dart  lsl_service.dart  recording_service.dart  xdf_writer.dart
flutter_version/logger_app/linux/: CMakeLists.txt
flutter_version/logger_app/linux/runner/: my_application.cc
flutter_version/logger_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_version/logger_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_version/logger_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_version/logger_app/web/: index.html  manifest.json
flutter_version/logger_app/windows/runner/: Runner.rc
flutter_version/xdf_files/: .metadata  README.md  pubspec.yaml
flutter_version/xdf_files/example/: example.dart
flutter_version/xdf_files/lib/: xdf_files.dart
flutter_version/xdf_files/lib/src/: xdf_helpers.dart  xdf_stream_info.dart  xdf_writer.dart  xdf_writer_general.dart
flutter_version/xdf_files/test/: xdf_files_test.dart
icons/: LogToLabStreamingLayerIcon_Light.icns
openspec/: project.md
openspec/changes/add-flutter-eventboard-parity/: proposal.md  tasks.md
openspec/changes/add-flutter-eventboard-parity/specs/logging/: spec.md
openspec/changes/add-flutter-parity/: design.md  proposal.md  tasks.md
openspec/changes/add-flutter-parity/specs/logging/: spec.md
openspec/changes/add-flutter-real-lsl/: proposal.md  tasks.md
openspec/changes/add-flutter-real-lsl/specs/logging/: spec.md
openspec/changes/add-logger-preferences-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-logger-preferences-panel/specs/logging/: spec.md
openspec/changes/refactor-python-src-layout/: proposal.md  tasks.md
openspec/changes/refactor-python-src-layout/specs/packaging/: spec.md
openspec/specs/logging/: spec.md
scripts/: build_exe.py  build_macOS_app.py  icon_recording_flasher_Qt_test.py  icon_recording_flasher_test.py  remove_enum34.py  switch_uv_sources.py  sync_clean.py  use_dev_sources.bat  use_release_sources.bat
scripts/testing/: InfluxDB_testing.ipynb  README_InfluxDB.md
src/phologtolabstreaminglayer/: __init__.py  logger_app.py
src/phologtolabstreaminglayer/features/: console_output_tk.py  global_hotkey.py  hide_console.py  recording_indicator_icon.py
src/phologtolabstreaminglayer/ui_qt/: main_window.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
