[project]
name = "phologtolabstreaminglayer"
version = "0.3.1"
description = "a complete but minimal python app that allows the user to take timestampped notes to labstreaminglayer with EventBoard functionality"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "attrs>=25.3.0",
    "cython>=3.1.4",
    "keyboard>=0.13.5",
    "matplotlib>=3.9.4",
    "mne>=1.8.0",
    "mne-lsl>=1.6.1",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pylsl>=1.17.6",
    "pystray>=0.19.5",
    "pytz>=2025.2",
    "pyxdf>=1.17.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phologtolabstreaminglayer"]


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
