[project]
name = "phologtolabstreaminglayer"
version = "0.3.3"
description = "a complete but minimal python app that allows the user to take timestampped notes to labstreaminglayer with EventBoard functionality"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "attrs>=25.3.0",
    "cython>=3.1.4",
    "dtw-python",
    "keyboard>=0.13.5",
    "lab-recorder-python",
    "matplotlib>=3.9.4",
    "mne>=1.8.0",
    "mne-lsl>=1.6.1",
    "phopylslhelper",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pylsl>=1.17.6",
    "pystray>=0.19.5",
    "pytz>=2025.2",
    "pyxdf>=1.17.0",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.7.1; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "torch; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    "wheel>=0.45.1",
    "whisper-timestamped",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phologtolabstreaminglayer"]


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv.sources]
dtw-python = { git = "https://github.com/DynamicTimeWarping/dtw-python.git" }
whisper-timestamped = { git = "https://github.com/CommanderPho/whisper-timestamped.git" }
phopylslhelper = { git = "https://github.com/CommanderPho/phopylslhelper.git" }
lab-recorder-python = { path = "../LSL_REPOS/lab-recorder-python", editable = true }
